// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Dropdown > snapshot — closed 1`] = `
<div
  class="relative"
>
  <div>
    <button>
      Trigger 
      closed
    </button>
  </div>
</div>
`;

exports[`Dropdown > snapshot — open 1`] = `
<div
  class="relative"
>
  <div>
    <button>
      Trigger 
      open
    </button>
  </div>
  <div
    class="absolute right-0 top-full mt-1.5 z-50 bg-elevated border border-border-strong rounded-lg shadow-xl min-w-[152px] py-1 overflow-hidden"
  >
    <button>
      Option A
    </button>
    <button>
      Option B
    </button>
  </div>
</div>
`;
